// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelCheckBoxDisabled Disabled LabelCheckbox should not allow to check 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #888596;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  color: #888596;
  font-size: 0.813rem;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #EBEEF0;
  border-radius: 0.25rem;
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <label
          class="emotion-3"
        >
          testLabel
        </label>
      </div>
      <input
        class="emotion-4"
        data-testid="hiddenCheckbox"
        disabled=""
        type="checkbox"
      />
      <div
        class="emotion-5"
        data-testid="styledCheckbox"
      />
    </label>
  </div>
</div>
`;

exports[`LabelCheckBoxDisabled Disabled LabelCheckbox with value set to true 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #888596;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  color: #888596;
  font-size: 0.813rem;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #EBEEF0;
  border-radius: 0.25rem;
  border: 0;
  cursor: not-allowed;
}

.emotion-6 {
  fill: #888596;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <label
          class="emotion-3"
        >
          testLabel
        </label>
      </div>
      <input
        checked=""
        class="emotion-4"
        data-testid="hiddenCheckbox"
        disabled=""
        type="checkbox"
      />
      <div
        class="emotion-5"
        data-testid="styledCheckbox"
      >
        <svg
          class="emotion-6"
          data-testid="checkboxIcon"
          fill="white"
          height="7"
          viewBox="0 0 10 7"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 0C8.72 0 8.47 0.11 8.29 0.29L4 4.59L1.71 2.29C1.53 2.11 1.28 2 1 2C0.45 2 0 2.45 0 3C0 3.28 0.11 3.53 0.29 3.71L3.29 6.71C3.47 6.89 3.72 7 4 7C4.28 7 4.53 6.89 4.71 6.71L9.71 1.71C9.89 1.53 10 1.28 10 1C10 0.45 9.55 0 9 0Z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;
